2004-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Updated version to 1.1Beta1

2004-03-24  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick/magick/libMagick.bpr: updated to latest source modifications.
	* BCBMagick/magick/GM_Magick.bpr: updated to latest source modifications.

2004-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/plasma.c (ReadPlasmaImage): srand() is already invoked by
	InitializeMagick() so don't call it here.
	* configure.ac: Check for rand_r().
	* magick/tempfile.c (ComposeTemporaryFileName): The full range of
	safe characters was not being used, thereby limiting the number of
	unique temporary file names available.

2004-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageStatistics): New function to obtain
	image statistics (minimum, maximum, mean, variance, and standard
	deviation).
	(DescribeImage): Include image channel statistics in verbose
	output.

2004-03-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): Removed some unreachable
	code that was accidentially left in the switch statement.
	* magick/pixel_iterator.c (PixelIterateDualRead): Extended so that
	the region in each image may use a different origin.
	(PixelIterateDualModify): Extended so that
	the region in each image may use a different origin.
	* magick/composite.c (CompositeImage): Fix XorCompositeOp overflow
	condition which occured on non-Intel architectures.

2004-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated with changes up to today's date.
	* tests/constitute.c (main): Float type seems to require allowing
	a bit of error for Q:32.
	* magick/constitute.c (DispatchImage): Be more careful when
	rounding pixel intensity.
	(ConstituteImage): Be more careful when converting float and
	double to Quantum.
	* magick/composite.c (CompositeImage): Fix Multiply composite
	operator for Q:32 build (was all black image).