@@ -53,6 +53,16 @@
 </tr>
 </table>
 <p>
+2004-03-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/constitute.c (ReadImage): If module loading reported an
+        error, ReadImage immediately returned an error rather than trying
+        to use a delegate defined by delegates.mgk.  Perhaps this version
+        works better.
+
+</UL>
+<p>
 2004-03-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
